--- a/pago.html
+++ b/pago.html
@@ -1,3 +1,24 @@
+<!-- Importa Firebase desde el CDN -->
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-functions.js"></script>
+
+<script>
+  // Configuración de Firebase (usa la que copiaste del paso anterior)
+ const firebaseConfig = {
+  apiKey: "AIzaSyC0v58p8yYcqU790hAl-3jx9c5sIEp_LlE",
+  authDomain: "visita-museo.firebaseapp.com",
+  projectId: "visita-museo",
+  storageBucket: "visita-museo.firebasestorage.app",
+  messagingSenderId: "1021775372783",
+  appId: "1:1021775372783:web:f166abc78a8620a67c161a",
+  measurementId: "G-JGTCKPK6ZK"
+};
+
+
+  // Inicializar Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
