--- a/pago.html
+++ b/pago.html
@@ -1,36 +1,12 @@
-<!-- Importa Firebase desde el CDN -->
-<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-functions.js"></script>
-
-<script>
-  // Configuración de Firebase (usa la que copiaste del paso anterior)
- const firebaseConfig = {
-  apiKey: "AIzaSyC0v58p8yYcqU790hAl-3jx9c5sIEp_LlE",
-  authDomain: "visita-museo.firebaseapp.com",
-  projectId: "visita-museo",
-  storageBucket: "visita-museo.firebasestorage.app",
-  messagingSenderId: "1021775372783",
-  appId: "1:1021775372783:web:f166abc78a8620a67c161a",
-  measurementId: "G-JGTCKPK6ZK"
-};
-
-
-  // Inicializar Firebase
-  firebase.initializeApp(firebaseConfig);
-</script>
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagar Entrada</title>
+    <title>Audioguía</title>
 </head>
 <body>
-    <h1>Visita Guiada - Museo</h1>
-    <p>Haz clic en el botón para pagar tu entrada</p>
-    <a href="https://buy.stripe.com/test_5kA6rAaiUeUIbgk8ww" target="_blank">
-        <button>Pagar Ahora</button>
-    </a>
+    <h1>Bienvenido a la Audioguía</h1>
+    <p>Contenido exclusivo para quienes pagaron.</p>
 </body>
 </html>
