--- a/success.html
+++ b/success.html
@@ -8,7 +8,7 @@
 <body>
     <h1>¡Gracias por tu compra!</h1>
     <p>Tu pago ha sido exitoso. Haz clic en el siguiente enlace para acceder a la audioguía. Este enlace estará disponible por 3 horas, pero solo se podrá usar en este dispositivo:</p>
-    <a href="https://tusitio.com/audioguia?access_token=UNICO_CODIGO" id="access-link">Acceder a la Audioguía</a>
+    <a href="https://riojatechmpasociados.github.io/visita-navarrete/audioguia_navarrete.html?access_token=UNICO_CODIGO" id="access-link">Acceder a la Audioguía</a>
 
     <script>
         // Función para establecer una cookie
