--- a/success.html
+++ b/success.html
@@ -35,7 +35,7 @@
 const paymentDone = getCookie('payment_done');
 const paymentTime = getCookie('payment_time');
 
-const expiryTime = 3 * 60 * 60 * 1000;  // 3 horas en milisegundos
+const expiryTime = 1 * 60 * 1000;  // 1 minuto en milisegundos (solo para pruebas)
 const currentTime = new Date().getTime();
 
 // Depuración: Verificar valores de tiempo
