--- a/success.html
+++ b/success.html
@@ -34,7 +34,7 @@
         <div class="text-center">
             <h1 class="display-4">¡Gracias por tu compra!</h1>
             <p class="lead">Tu pago ha sido exitoso. Haz clic en el siguiente enlace para acceder a la audioguía. Este enlace estará disponible por 2 minutos, pero solo se podrá usar en este dispositivo:</p>
-            <a href="https://tusitio.com/audioguia" id="access-link" class="btn btn-primary btn-lg">Acceder a la Audioguía</a>
+            <a href="https://riojatechmpasociados.github.io/visita-navarrete/audioguia_navarrete.html" id="access-link" class="btn btn-primary btn-lg">Acceder a la Audioguía</a>
         </div>
     </div>
 
