--- a/success.html
+++ b/success.html
@@ -34,7 +34,7 @@
         <div class="text-center">
             <h1 class="display-4">¡Gracias por tu compra!</h1>
             <p class="lead">Tu pago ha sido exitoso. Haz clic en el siguiente enlace para acceder a la audioguía. Este enlace estará disponible por 2 minutos, pero solo se podrá usar en este dispositivo:</p>
-            <a href="https://tusitio.com/audioguia" id="access-link" class="btn btn-primary btn-lg">Acceder a la Audioguía</a>
+            <a href="https://riojatechmpasociados.github.io/visita-navarrete/audioguia_navarrete.html" id="access-link" class="btn btn-primary btn-lg">Acceder a la Audioguía</a>
         </div>
     </div>
 
@@ -68,6 +68,10 @@
         function checkAccess() {
             const paymentDone = getCookie('payment_done');
             const paymentTime = getCookie('payment_time');
+
+            // Depuración: Verificar las cookies
+            console.log('payment_done:', paymentDone);
+            console.log('payment_time:', paymentTime);
 
             const expiryTime = 2 * 60 * 1000;  // 2 minutos en milisegundos (120,000 ms)
             const currentTime = new Date().getTime();
