--- a/success.html
+++ b/success.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pago Completo - Audioguía efraim-1</title>
+    <title>Pago Completo - Audioguía</title>
 </head>
 <body>
     <h1>¡Gracias por tu compra!</h1>
-    <p>Tu pago ha sido exitoso. Haz clic en el siguiente enlace para acceder a la audioguía. Este enlace estará disponible por 2 minutos, pero solo se podrá usar en este dispositivo:</p>
+    <p>Tu pago ha sido exitoso --efraim 1--. Haz clic en el siguiente enlace para acceder a la audioguía. Este enlace estará disponible por 2 minutos, pero solo se podrá usar en este dispositivo:</p>
     <a href="#" id="access-link">Acceder a la Audioguía</a>
 
     <script>
