--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Audioguía del Museo</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://js.stripe.com/v3/"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -31,17 +31,17 @@
     }
   </style>
   <script>
-    // Función para verificar si el referer es de Stripe
+    // Función para verificar si el referer es de www.riojatech.com
     function checkReferer() {
       var referer = document.referrer;
 
-      // Verificar si el referer comienza con https://checkout.stripe.com
-      if (referer && referer.startsWith('https://google.com')) {
+      // Verificar si el referer comienza con https://www.riojatech.com
+      if (referer && referer.startsWith('https://www.riojatech.com')) {
         // Si el referer es válido, permitir que se cargue la página
-        console.log('Acceso permitido desde Stripe');
+        console.log('Acceso permitido desde www.riojatech.com');
       } else {
-        // Si no proviene de Stripe, redirigir a la página de error o a otra URL
-        alert('Acceso no autorizado. Debes llegar a esta página desde Stripe.');
+        // Si no proviene de www.riojatech.com, redirigir a la página de error o a otra URL
+        alert('Acceso no autorizado. Debes llegar a esta página desde www.riojatech.com.');
         window.location.href = 'https://www.example.com';  // Redirigir a una página de error o al inicio
       }
     }
@@ -79,7 +79,7 @@
         Tu navegador no soporta la etiqueta de audio.
       </audio>
     </div>
- qq
+
     <!-- Agregar más paradas según sea necesario -->
 
     <!-- Para la parada 10 -->
@@ -102,6 +102,5 @@
     <a href="#">Cookies</a>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
