--- a/index.html
+++ b/index.html
@@ -30,20 +30,21 @@
       text-decoration: underline;
     }
   </style>
-  <meta name="referrer" content="no-referrer-when-downgrade"> <!-- Añadir política de referer -->
   <script>
-    // Función para verificar si el referer es de www.riojatech.com
+    // Función para verificar el parámetro 'ref' en la URL
     function checkReferer() {
-      var referer = document.referrer;
+      // Obtener el valor del parámetro 'ref' en la URL
+      var urlParams = new URLSearchParams(window.location.search);
+      var ref = urlParams.get('ref'); // Obtener el valor del parámetro 'ref'
 
-      console.log('Referer:', referer);  // Ver el referer en la consola
+      console.log('ref:', ref);  // Ver el valor del parámetro 'ref' en la consola
 
-      // Verificar si el referer contiene "riojatech.com"
-      if (referer && referer.indexOf('riojatech.com') !== -1) {
+      // Verificar si el parámetro 'ref' es igual a 'riojatech'
+      if (ref === 'riojatech') {
         console.log('Acceso permitido desde www.riojatech.com');
       } else {
-        alert('Acceso no autorizado3. Debes llegar a esta página desde www.riojatech.com.');
-        window.location.href = 'https://www.example.com';  // Redirigir a otra página
+        alert('Acceso no autorizado. Debes llegar a esta página desde www.riojatech.com.');
+        window.location.href = 'https://www.example.com';  // Redirigir a una página de error o al inicio
       }
     }
 
