--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       if (ref === 'riojatech') {
         console.log('Acceso permitido desde www.riojatech.com');
       } else {
-        alert('Acceso no autorizado. Debes llegar a esta página desde www.riojatech.com.');
+        alert('Acceso no autorizado4. Debes llegar a esta página desde www.riojatech.com.');
         window.location.href = 'https://www.example.com';  // Redirigir a una página de error o al inicio
       }
     }
